fixed z-index

--- a/style/style.css
+++ b/style/style.css
@@ -121,6 +121,7 @@ h2 {
 
 .road-container {
     position: fixed;
+    z-index: 200;
     bottom: 0;
     width: 100vw;
     left: 0;
@@ -141,7 +142,7 @@ h2 {
     background-repeat: no-repeat;
     left: var(--car-left);
     bottom: 25px;
-    z-index: 100;
+    z-index: 1000;
     width: 100px;
     height: 50px;
     box-shadow: 14px 24px 44px -17px rgba(0, 0, 0, 0.75);
